k8s/metallb/namespace-metallb.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "metallb"
  labels:
    goldilocks.fairwinds.com/enabled: "true"
